[package]
name = "cch23-julius"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
base64 = "0.21.5"
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.34.0"
