[package]
name = "cch23-julius"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = "0.4.31"
fancy-regex = "0.12.0"
hex = "0.4.3"
html-escape = "0.2.13"
image = "0.24.7"
lazy_static = "1.4.0"
ordered-float = { version = "4.2.0", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shuttle-actix-web = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = "0.7.3"
tokio = "1.35.0"
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
unic-emoji-char = "0.9.0"
uuid = "1.6.1"
